--- a/src/components/chatInput.module.scss
+++ b/src/components/chatInput.module.scss
@@ -6,53 +6,51 @@ $text-color: #f0f0f0;
 
 .chatInputForm {
   display: flex;
-  // align-items: flex-end;
   align-items: center;
-  justify-content: center;
-  align-content: center;
+  // justify-content: center;
   gap: 1rem;
   padding: 1rem;
   background-color: $bg-input;
-  position: fixed;
-  bottom: 0px;
-  left: 300px;
-  min-width: 70%;
-  max-width: 80%;
+  // position: fixed;
+  // bottom: 0px;
+  // left: 300px;
+  width: 90%;
+  // max-width: 80%;
   z-index: 1000;
-  border-top: 1px solid $border-glow;
+  // border-top: 1px solid $border-glow;
   border-radius: 10px;
-  animation: inputGlow 4s ease-in-out infinite alternate;
+  animation: inputGlow 6s ease infinite alternate;
 
   @keyframes inputGlow {
     0% {
       box-shadow: 0 -2px 10px rgba($border-glow, 0.2);
     }
     100% {
-      box-shadow: 0 -2px 20px rgba($border-glow, 0.8);
+      box-shadow: 0 -2px 20px rgba($border-glow, 0.9);
     }
   }
 
-  @media (max-width: 1200px) {
-    min-width: 70%;
-    max-width: 70%;
-  }
+  // @media (max-width: 1200px) {
+  //   min-width: 70%;
+  //   max-width: 70%;
+  // }
 
-  @media (max-width: 1110px) {
-    left: 270px;
-    min-width: 70%;
-    max-width: 70%;
-  }
+  // @media (max-width: 1110px) {
+  //   left: 270px;
+  //   min-width: 70%;
+  //   max-width: 70%;
+  // }
 
-  @media (max-width: 1000px) {
-    min-width: 60%;
-    max-width: 60%;
-  }
+  // @media (max-width: 1000px) {
+  //   min-width: 60%;
+  //   max-width: 60%;
+  // }
 
-  @media (max-width: 768px) {
-    left: 10px;
-    min-width: 90%;
-    max-width: 90%;
-  }
+  // @media (max-width: 768px) {
+  //   left: 10px;
+  //   min-width: 90%;
+  //   max-width: 90%;
+  // }
 }
 
 /* Multi-line text box */
