--- a/src/components/chatMessages.module.scss
+++ b/src/components/chatMessages.module.scss
@@ -5,17 +5,38 @@ $user-bg: #2196f3;
 $text-color: #ffffff;
 $message-gap: 1rem;
 
+// .mainChatWrapper {
+//   position: fixed;
+//   top: 50px;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+//   overflow-y: auto;
+//   display: flex;
+//   justify-self: center;
+//   transition: padding-left 0.3s ease;
+//   background: #fafcff;
+//   padding-top: 70px; // gap to avoid topbar overlapping with messages
+//   padding-bottom: 140px; // gap to avoid chatbox overlapping with messages
+
+//   &.sidebar-open {
+//     padding-left: 260px;
+//   }
+// }
+
 .messagesContainer {
   flex: 1;
   padding: 1rem;
+  width: 100%;
+  max-width: 1200px;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
   gap: $message-gap;
-  background: #fafcff;
+  // background: #fafcff;
 
-  padding-top: 70px; // gap to avoid topbar overlapping with messages
-  padding-bottom: 140px; // gap to avoid chatbox overlapping with messages
+  padding-top: 30px; // gap to avoid topbar overlapping with messages
+  padding-bottom: 70px; // gap to avoid chatbox overlapping with messages
 }
 
 // Expand/Collapse or fade in animation for new messages
@@ -38,6 +59,10 @@ $message-gap: 1rem;
   color: $text-color;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
   animation: messageAppear 0.8s ease forwards;
+
+  @media (max-width: 768px) {
+    max-width: 85%;
+  }
 }
 
 .assistant {
